@@ -5859,4 +5859,8 @@
 	  disabled (2013-10-23).
 	* arch/arm/src/sama5/sam_tc.c and .h:  First but at a timer/counter
 	  library for the SAMA5D3 (2013-10-23).
+	* configs/spark/nsh/defconfig:  Spark configuration update from David
+	  Sidrane (2013-10-24).
+	* drivers/wireless/cc3000/cc3000.c:  CC3000 driver update from David
+	  Sidrane (2013-10-24).
 
